causality and medicare factoid points fixed in the text

--- a/mSystems/rev2/mSys_MAIN_rev2.tex
+++ b/mSystems/rev2/mSys_MAIN_rev2.tex
@@ -260,6 +260,7 @@ Reduced diversity and altered composition of the gut microbiome in individuals w
 
 %% Results
 \bibitem{fs} {\bf Eisler Z, Bartos I, Kertész J.} 2008. Fluctuation scaling in complex systems: Taylor’s law and beyond1. Adv Phys {\bf 57}:89–142.
+\bibitem{medicare} {\bf Hidalgo CA, Blumm N, Barabási AL, Christakis NA.} 2009. A Dynamic Network Approach for the Study of Human Phenotypes. PLoS Comput Biol {5}.
 % -> main studies
 \bibitem{moving} {\bf Caporaso JG, Lauber CL, Costello EK, Berg-Lyons D, Gonzalez A, Stombaugh J, Knights D, Gajer P, Ravel J, Fierer N, Gordon JI, Knight R.} 2011. Moving pictures of the human microbiome. Genome Biol {\bf 12}:R50.
 \bibitem{antibiotic} {\bf Dethlefsen L, Relman DA.} 2011. Incomplete recovery and individualized responses of the human distal gut microbiota to repeated antibiotic perturbation. Proc Natl Acad Sci {\bf108}:4554–61.
