--- a/mSystems/rev2/mSys_intro_rev2.tex
+++ b/mSystems/rev2/mSys_intro_rev2.tex
@@ -4,4 +4,4 @@ High throughput methods for microbial 16S ribosomal RNA gene and SMS (shotgun me
 
 Biology has recently acquired new technological and conceptual tools to investigate, model and understand living organisms at system level, thanks to spectacular progress in quantitative techniques, large-scale measurement methods and the integration of experimental and computational approaches. In particular, Systems Biology has made great efforts to reveal the general laws governing the complex behaviour of microbial communities \cite{sysbio&microb, msys1, metasysbio}, including a proposal suggesting they have universal dynamics \cite{uni_dynam}. Microbiota can be approached under the light of ecological theory which includes general principles like Taylor's law \cite{pretaylor,taylor} that relates the spatial or temporal variability of the population with its mean. This law, also known as fluctuation scale law, is ubiquitous in the natural world and can be found in several systems like random walks \cite{randomwalks}, stock markets \cite{economics1, economics2}, tree \cite{cohen_taylor} and animal populations \cite{taylor, animal1, animal2}, gene expression \cite{genexpress}, and the human genome \cite{genome}. Taylor's law has been applied to microbiota in a spatial way in the work of Zhang {\it et al.}, (2014) \cite{isme1}, where they show that this population tends to be an aggregated one rather than having a random distribution. Despite its ubiquity, it has only been studied in experimental settings \cite{cohen_bac, ramslayer} but has never been applied in follow-up studies on microbiota, even though major efforts have been made to infer the community structure from a dynamic point of view \cite{cobas, schloss, ravel}  
 
-This paper presents the imprints of health status (healthy or disease) in the macroscopic properties of microbiota, by studying its temporal variability. We analyzed more than 40000 time series of taxa from the gut microbiome of 99 individuals obtained from publicly available high throughput sequencing data about different conditions: diseases, diets, trips, obese status, antibiotic therapy and healthy individuals. Having seen that all the cases followed Taylor's law, we used this empirical fact to model how the relative abundances of taxa evolved over time thanks to the Langevin equation, in a similar way as the approach applied recently by Blumm {\it et al.} \cite{ranking}. We used this mathematical framework to explore the temporal stability of microbiota under different conditions in order to understand how this affected the healthy status of the subjects.
+This paper presents the imprints of health status (healthy or disease) in the macroscopic properties of microbiota, by studying its temporal variability. We analyzed more than 40000 time series of taxa from the gut microbiome of 99 individuals obtained from publicly available high throughput sequencing data about different conditions: diseases, diets, trips, obese status, antibiotic therapy and healthy individuals. Having seen that all the cases followed Taylor's law, we used this empirical fact to model how the relative abundances of taxa evolved over time thanks to the Langevin equation, in a similar way as the approach applied recently by Blumm {\it et al.} \cite{ranking}. We used this mathematical framework to explore the temporal stability of microbiota under different conditions in order to understand how this is related to the healthy status of the subjects.
