--- a/mSystems/rev2/mSys_results_rev2.tex
+++ b/mSystems/rev2/mSys_results_rev2.tex
@@ -1,5 +1,5 @@
 
-The microbiome temporal variability was analyzed to extract the global properties of the system. As fluctuations in total counts are plagued by systematic errors we worked on the temporal variability of relative abundances for each taxon. Our first finding was that, in all cases, changes in the relative abundances of taxa followed a ubiquitous pattern, known as the fluctuation scaling law\cite{fs} or Taylor's power law\cite{taylor}, i.e., the microbiota of all detected taxa followed $\sigma_i  = V\cdot x_i^{\beta}$, a power law dependence between the mean relative abundance $x_i$ and the dispersion $\sigma_i$. The law seem to be ubiquitous, spanning even to six orders of magnitude in the observed relative abundances. As shown in Figure \ref{fig:main1}, the most abundant species were less volatile in relative terms than those which were less abundant. The fitting to the power law was always robust ($R^{2}$ > 0.88) and did not depend on the microbiome condition. The power law (or scaling) index $\beta$ and the variability $V$ (hereafter Taylor's parameters) appear to be correlated with the stability of the community. On the one hand, $\beta$ is a scaling index that gave us information about the statistical properties of the ecosystem. If it is $1/2$, the system behaves like a Poisson distribution. If $\beta$ is 1, the system behaves as an exponential distribution. Generally speaking, metagenomes vary with time with $\beta$ between these two universal classes. In our case, the fact that $\beta$ was less than 1 tells us that the most abundant taxa in the microbial community were less susceptible to any perturbation than the other taxa. On the other hand, the variability $V$ was a direct estimator of the amplitude of fluctuations over time. $V$ represents the maximum variability attainable by a hypothetical dominant genus (with relative abundance close to 1). It is an important parameter that characterizes the type of system. If $V$ is small the ranking is stable such as, for example, the number of diagnoses of a particular disease recorded in Medicare during a month. If $V$ is large, as it seems to be the case of metagenomic samples, the ranking might be unstable, like the number of hourly page views of articles in Wikipedia \cite{ranking,fs}. The Taylor parameters were related to the health status of the host, which we consider as constituting the main finding contributed by this article.
+The microbiome temporal variability was analyzed to extract the global properties of the system. As fluctuations in total counts are plagued by systematic errors we worked on the temporal variability of relative abundances for each taxon. Our first finding was that, in all cases, changes in the relative abundances of taxa followed a ubiquitous pattern, known as the fluctuation scaling law\cite{fs} or Taylor's power law\cite{taylor}, i.e., the microbiota of all detected taxa followed $\sigma_i  = V\cdot x_i^{\beta}$, a power law dependence between the mean relative abundance $x_i$ and the dispersion $\sigma_i$. The law seem to be ubiquitous, spanning even to six orders of magnitude in the observed relative abundances. As shown in Figure \ref{fig:main1}, the most abundant species were less volatile in relative terms than those which were less abundant. The fitting to the power law was always robust ($R^{2}$ > 0.88) and did not depend on the microbiome condition. The power law (or scaling) index $\beta$ and the variability $V$ (hereafter Taylor's parameters) appear to be correlated with the stability of the community. On the one hand, $\beta$ is a scaling index that gave us information about the statistical properties of the ecosystem. If it is $1/2$, the system behaves like a Poisson distribution. If $\beta$ is 1, the system behaves as an exponential distribution. Generally speaking, metagenomes vary with time with $\beta$ between these two universal classes. In our case, the fact that $\beta$ was less than 1 tells us that the most abundant taxa in the microbial community were less susceptible to any perturbation than the other taxa. On the other hand, the variability $V$ was a direct estimator of the amplitude of fluctuations over time. $V$ represents the maximum variability attainable by a hypothetical dominant genus (with relative abundance close to 1). It is an important parameter that characterizes the type of system. If $V$ is small the ranking is stable, similar to the number of diagnoses of a particular disease recorded in Medicare  during a month \cite{medicare}. If $V$ is large, as it seems to be the case of metagenomic samples, the ranking might be unstable, like the number of hourly page views of articles in Wikipedia \cite{ranking,fs}. The Taylor parameters were related to the health status of the host, which we consider as constituting the main finding contributed by this article.
 
 \begin{figure}
 	\centering
