figure 1 caption changed, V time dependence better explained

--- a/mSystems/rev2/mSys_MAIN_rev2.tex
+++ b/mSystems/rev2/mSys_MAIN_rev2.tex
@@ -4,7 +4,7 @@
 \documentclass[12pt,oneside,letterpaper]{article}
 
 % release codenumber (update it here!)
-\newcommand\releasecode{REV2 DRAFT$\alpha$}
+\newcommand\releasecode{REV2 DRAFT$\beta$}
 
 %%% PACKAGES
 \usepackage{lmodern} % Activa fuentes y macros de Latin Modern
