response to reviewer is more complete intro modified accoding to the rev2

--- a/mSystems/rev2/mSys_intro_rev2.tex
+++ b/mSystems/rev2/mSys_intro_rev2.tex
@@ -1,4 +1,4 @@
-The desire to understand the factors that influence human health and cause disease has always been one of the major driving forces of biological research. As evidence of the new "holobiont"  and "hologenome" concepts is increasing each day \cite{holo1, holo2}, research not only focuses on the human physiology but also on the microbial population that surrounds us. However, these concepts are still under debate \cite{holo3}. We are populated by a myriad of microorganisms that interact with us in several physiological processes such as the metabolism of bile acids \cite{bileacids}, of choline \cite{choline} and key-route metabolites, such as short-chain fatty acids \cite{scfa1, scfa2} which are also involved in immune system maturation \cite{scfa3, scfa4}. Human microbiota has been suggested to be closely related to diseases like type 2 diabetes \cite{diabetes2}, cardiovascular disease (CVD) \cite{CVD}, irritable bowel syndrome \cite{IBS}, Crohn's disease \cite{CD}, some affections like obesity \cite{ob1, ob2} and malnutrition \cite{nutr} as well as other multiple diseases \cite{Moya_trends}. Current studies reveal that gut microbiota also influences brain function and behaviour and is related to neurological disorders like Alzheimer's disease through the brain-gut-microbiome axis\cite{mind,AD}. Recently, even a mystifying and elusive condition which is hard to diagnose like chronic fatigue syndrome, which has often been suggested to be a psychosomatic disease, has been closely related to reduced diversity and altered composition of the gut microbiome\cite{CFS}. 
+The desire to understand the factors that influence human health and cause disease has always been one of the major driving forces of biological research. As evidence of the new "holobiont"  and "hologenome" concepts is increasing each day \cite{holo1, holo2}, research not only focuses on the human physiology but also on the microbial population that surrounds us. However, these concepts are still under debate \cite{holo3}. The human microbiome is intimately linked to our physiology with the metabolism of bile acids \cite{bileacids}, of choline \cite{choline} and key metabolites like short-chain fatty acids \cite{scfa1, scfa2} which are also involved in immune system maturation \cite{scfa3, scfa4}. Human microbiota has been suggested to be closely related to diseases like type 2 diabetes \cite{diabetes2}, cardiovascular disease (CVD) \cite{CVD}, irritable bowel syndrome \cite{IBS}, Crohn's disease \cite{CD}, some afflictions like obesity \cite{ob1, ob2} and malnutrition \cite{nutr} as well as many other diseases \cite{Moya_trends}. Recent studies have revealed that microbes also influence brain function and behaviour and are related to neurological disorders like Alzheimer's disease through the gut-brain axis\cite{mind,AD}. Recently, even a subtle condition like chronic fatigue syndrome, which has often been suggested to be a psychosomatic disease, has been associated with reduced diversity and altered composition of the gut microbiome\cite{CFS}. 
 
 High throughput methods for microbial 16S ribosomal RNA gene and SMS (shotgun metagenomic sequencing) have now begun to reveal the composition of archaeal, bacterial, fungal and viral communities located both, in and on the human body. Modern high-throughput sequencing and bioinformatics tools provide a powerful means of understanding how the human microbiome contributes to health and its potential as a target for therapeutic interventions \cite{microb&health}. To define normal host-gut microbe interactions and how microbiota compositional changes can cause some diseases are important issues that still require scientific answers \cite{normal1, normal2, panthropology}.
 
