--- a/mSystems/rev2/mSys_results_rev2.tex
+++ b/mSystems/rev2/mSys_results_rev2.tex
@@ -1,5 +1,5 @@
 
-The microbiome temporal variability was analyzed to extract the global properties of the system. As fluctuations in total counts are plagued by systematic errors we worked on the temporal variability of relative abundances for each taxon. Our first finding was that, in all cases, changes in the relative abundances of taxa followed a ubiquitous pattern, known as the fluctuation scaling law\cite{fs} or Taylor's power law\cite{taylor}, i.e., the microbiota of all detected taxa followed $\sigma_i  = V\cdot x_i^{\beta}$, a power law dependence between the mean relative abundance $x_i$ and the dispersion $\sigma_i$. The law seem to be ubiquitous, spanning even to six orders of magnitude in the observed relative abundances. As shown in Figure \ref{fig:main1}, where $V$ corresponds to the y-intercept and $\beta$ is the slope of the fit, the most abundant species were less volatile in relative terms than those which were less abundant. The fitting to the power law was always robust ($R^{2}$ > 0.88) and did not depend on the microbiome condition. The power law (or scaling) index $\beta$ and the variability $V$ (hereafter Taylor's parameters) appear to be correlated with the stability of the community. On the one hand, $\beta$ is a scaling index that gave us information about the statistical properties of the ecosystem. If it is $1/2$, the system behaves like a Poisson distribution. If $\beta$ is 1, the system behaves as an exponential distribution. Generally speaking, metagenomes vary with time with $\beta$ between these two universal classes. In our case, the fact that $\beta$ was less than 1 tells us that the most abundant taxa in the microbial community were less susceptible to any perturbation than the other taxa. On the other hand, the variability $V$ was a direct estimator of the amplitude of fluctuations over time. $V$ represents the maximum variability attainable by a hypothetical dominant genus (with relative abundance close to 1). It is an important parameter that characterizes the type of system. If $V$ is small the ranking is stable, similar to the number of diagnoses of a particular disease recorded in Medicare  during a month \cite{medicare}. If $V$ is large, as it seems to be the case of metagenomic samples, the ranking might be unstable, like the number of hourly page views of articles in Wikipedia \cite{ranking,fs}. The Taylor parameters were related to the health status of the host, which we consider as constituting the main finding contributed by this article.
+The microbiome temporal variability was analyzed to extract the global properties of the system. As fluctuations in total counts are plagued by systematic errors we worked on the temporal variability of relative abundances for each taxon. Our first finding was that, in all cases, changes in the relative abundances of taxa followed a ubiquitous pattern, known as the fluctuation scaling law\cite{fs} or Taylor's power law\cite{taylor}, i.e., the microbiota of all detected taxa followed $\sigma_i  = V\cdot x_i^{\beta}$, a power law dependence between the mean relative abundance $x_i$ and the dispersion $\sigma_i$. The law seem to be ubiquitous, spanning even to six orders of magnitude in the observed relative abundances. As shown in Figure \ref{fig:main1}, where $V$ corresponds to the y-intercept and $\beta$ is the slope of the fit, the most abundant species were less volatile in relative terms than those which were less abundant. The fitting to the power law was always robust ($R^{2}$ > 0.88) and did not depend on the microbiome condition. The power law (or scaling) index $\beta$ and the variability $V$ (hereafter Taylor's parameters) appear to be correlated with the stability of the community. For this, we assume that Taylor's parameters behave as proxies for the stability. On the one hand, $\beta$ is a scaling index that gave us information about the statistical properties of the ecosystem. If it is $1/2$, the system behaves like a Poisson distribution. If $\beta$ is 1, the system behaves as an exponential distribution. Generally speaking, metagenomes vary with time with $\beta$ between these two universal classes. In our case, the fact that $\beta$ was less than 1 tells us that the most abundant taxa in the microbial community were less susceptible to any perturbation than the other taxa. On the other hand, the variability $V$ was a direct estimator of the amplitude of fluctuations over time. $V$ represents the maximum variability attainable by a hypothetical dominant genus (with relative abundance close to 1). It is an important parameter that characterizes the type of system. If $V$ is small the ranking is stable, similar to the number of diagnoses of a particular disease recorded in Medicare  during a month \cite{medicare}. If $V$ is large, as it seems to be the case of metagenomic samples, the ranking might be unstable, like the number of hourly page views of articles in Wikipedia \cite{ranking,fs}. The Taylor parameters were related to the health status of the host, which we consider as constituting the main finding contributed by this article.
 
 \begin{figure}
 	\centering
@@ -34,7 +34,7 @@ Taylor's power law has been explained in terms of various effects, though none h
 	\label{fig:main3}
 \end{figure}
 
-The model predicted two phases for the gut microbiome: a stable phase with large variability that enabled some changes in the relative abundances of taxa; and an unstable phase with larger variability, above the phase transition, where the order of abundant taxa varies significantly over time. The microbiome of all healthy individuals was found to be in the stable phase, while the microbiome of several other individuals was shown to be in the unstable phase. In particular, individuals taking antibiotics and the IBS--diagnosed patient \emph{P2} had the most severe symptoms. In this phase diagram, each microbiota state is represented by a point at its measured variability $V$ and inferred fitness $F$. The model predicted high average fitness for all taxa, i.e., taxa were narrowly distributed in $F$. The fitness parameter was chosen with different values for demonstrative purposes. Fitness was larger for the healthiest subjects and smaller for the IBS--diagnosed patients.
+The model predicted two phases for the gut microbiome: a stable phase with large variability that enabled some changes in the relative abundances of taxa; and an unstable phase with even larger variability, above the phase transition, where the order of abundant taxa varies significantly over time. The phase transition is continuous (of second order), as is the crossing of the boundary. The state variable is the composition. Any disturbance modifies the composition of the microbiota, with different compositions encoding different $F$ and $V$. Our model can be solved analytically, which allows to a simple understanding of the different regimes, and in particular, to calculate the formula of the transition region. If $V$ is sufficiently small compared to $F$, there is a maximum in the likelihood in the physical region (relative compositions larger than zero and smaller than one), i.e., there is a best composition solution of the differential equation, which is the ordered solution. On the contrary, if $V$ is sufficiently large compared to $F$ the maximum in the likelihood is outside the physical region, i.e., the best composition solution of the differential equation is at the boundaries (either zero or one) and all physical solutions have comparable likelihoods, which is the noisy phase. The microbiome of healthy individuals was found to be in the stable phase, while the microbiome of several other individuals was shown to be in the unstable phase. In particular, individuals taking antibiotics and the IBS--diagnosed patient \emph{P2} had the most severe symptoms. In this phase diagram, each microbiota state is represented by a point at its measured variability $V$ and inferred fitness $F$. The model predicted high average fitness for all taxa, i.e., taxa were narrowly distributed in $F$. The fitness parameter was chosen with different values for demonstrative purposes. Fitness was larger for the healthiest subjects and smaller for the IBS--diagnosed patients.
 
 %%%
 \subsection*{Rank stability of the taxa} 
