mSys: several figs&text changes which lead to REV2 DRAFT delta
On branch master changes to be committed:
	modified:   Response to Reviewer Comments.docx
	modified:   figs/Fig1.eps
	modified:   figs/Fig4.eps
	modified:   figs/Fig5.eps
	new file:   figs/HostLifeStyle_StoolA_day72to122_abroad_TAILLESS_Rank.pdf
	new file:   figs/HostLifeStyle_h_StoolA_day0to70_before_TAILLESS_Rank.pdf
	new file:   figs/HostLifeStyle_h_StoolA_day123to256_returned_TAILLESS_Rank.pdf
	new file:   figs/HostLifeStyle_h_StoolA_day257to364_after_TAILLESS_Rank.pdf
	modified:   figs/_ed_Fig1.pdf
	modified:   figs/_ed_supfig_taxlev2.pdf
	modified:   figs/supfig_corrank_HLS_StoolA_after.eps
	modified:   figs/supfig_corrank_HLS_StoolA_before.eps
	modified:   figs/supfig_taxlev2.eps
	modified:   mSys_MAIN_rev2.pdf
	modified:   mSys_MAIN_rev2.tex
	modified:   mSys_MandM_rev2.tex
	modified:   mSys_discussion_rev2.tex
	modified:   mSys_intro_rev2.tex
	modified:   mSys_results_rev2.tex

--- a/mSystems/rev2/mSys_results_rev2.tex
+++ b/mSystems/rev2/mSys_results_rev2.tex
@@ -3,10 +3,10 @@ The microbiome temporal variability was analyzed to extract the global propertie
 
 \begin{figure}
 	\centering
-	\vspace*{-15mm} % Corrects overbox of the figures
+	%\vspace*{-15mm} % Corrects overbox of the figures
 	%\includegraphics[width=0.8\textwidth]{results/fits/IBS_h_A_amplicons_family_stdVSmean_xWboot_LOG.pdf}
 	%\includegraphics[width=0.8\textwidth]{results/fits/IBS_P2_Metatranscriptores_stdVSmean_xWboot_LOG.pdf}
-	\includegraphics[width=0.8\textwidth]{figs/Fig1.eps}
+	\includegraphics[width=0.7\textwidth]{figs/Fig1.eps}
 	\caption{X-weighted power-law fits of the standard deviations versus the mean values for each bacterial genus monitored over time. The fit is shown for samples from a healthy subject (top) and from a subject diagnosed with irritable bowel syndrome (bottom), studied in our lab \cite{IBS}. Taylor's power law seems to be ubiquitous, spanning to six orders of magnitude. $V$ corresponds to the y-intercept and $\beta$ to the slope of the line. The error bars (\emph{mean-axis}) are the SEM.}
 	\label{fig:main1}
 \end{figure}
@@ -45,7 +45,7 @@ The rank dynamics and stability plots in Figure \ref{fig:corrank_HLS_abroad} and
 	\centering
 	%\vspace*{-10mm} % Corrects overbox of the figures
 	\includegraphics[width=1.0\textwidth]{figs/Fig4.eps}
-	\caption{Rank variation over time for the 50 most dominant elements (taxa) and their calculated Rank Stability Index (as shown in Material and Methods) for a special period (days 72 to 122, travelling abroad) belonging to the individual \emph{A} in the host lifestyle study \cite{hostlife}.}
+	\caption{Rank variation over time for the 50 most dominant elements (taxa) and their calculated RSI (Rank Stability Index), Rank Variability (RV) and Differences Variability (DV), as detailed in Rank stability and variability in Material and Methods, for a special period (days 72 to 122, travelling abroad) belonging to the individual \emph{A} in the host lifestyle study \cite{hostlife}.}
 	\label{fig:corrank_HLS_abroad}
 \end{figure}
 
@@ -53,7 +53,7 @@ The rank dynamics and stability plots in Figure \ref{fig:corrank_HLS_abroad} and
 	\centering
 	%\vspace*{-10mm} % Corrects overbox of the figures \hspace*{-4.5mm}
 	\includegraphics[width=1.0\textwidth]{figs/Fig5.eps}
-	\caption{Rank variation over time for the 50 most dominant elements (taxa) and their calculated Rank Stability Index (as shown in Material and Methods) for an ordinary period (days 123 to 256, after the trip) belonging to the individual \emph{A} in the host lifestyle study \cite{hostlife}.}
+	\caption{Rank variation over time for the 50 most dominant elements (taxa) and their calculated RSI (Rank Stability Index), Rank Variability (RV) and Differences Variability (DV), as detailed in Rank stability and variability in Material and Methods, for an ordinary period (days 123 to 256, after the trip) belonging to the individual \emph{A} in the host lifestyle study \cite{hostlife}.}
 	\label{fig:corrank_HLS_returned}
 \end{figure}
 
@@ -66,14 +66,14 @@ We also found those \emph{rank stability islands} for medium-ranked taxa in the 
 \begin{supfig}
 	\centering
 	\includegraphics[width=1.0\textwidth]{figs/supfig_corrank_HLS_StoolA_before.eps}
-	\caption{Rank variation over time for the 50 most dominant elements (taxa) and their calculated Rank Stability Index (as shown in Material and Methods) for an ordinary period (days 0 to 70, before the trip) belonging to the individual \emph{A} in the host lifestyle study \cite{hostlife}.}
+	\caption{Rank variation over time for the 50 most dominant elements (taxa) and their calculated RSI (Rank Stability Index), Rank Variability (RV) and Differences Variability (DV), as detailed in Rank stability and variability in Material and Methods, for an ordinary period (days 0 to 70, before the trip) belonging to the individual \emph{A} in the host lifestyle study \cite{hostlife}.}
 	\label{supfig:corrank_HLS_before}
 \end{supfig}
 
 \begin{supfig}
 	\centering
 	\includegraphics[width=1.0\textwidth]{figs/supfig_corrank_HLS_StoolA_after.eps}
-	\caption{Rank variation over time for the 50 most dominant elements (taxa) and their calculated Rank Stability Index (as shown in Material and Methods) for an ordinary period (days 257 to 364, further after the trip) belonging to the individual \emph{A} in the host lifestyle study \cite{hostlife}.}
+	\caption{Rank variation over time for the 50 most dominant elements (taxa) and their calculated RSI (Rank Stability Index), Rank Variability (RV) and Differences Variability (DV), as detailed in Rank stability and variability in Material and Methods, for an ordinary period (days 257 to 364, further after the trip) belonging to the individual \emph{A} in the host lifestyle study \cite{hostlife}.}
 	\label{supfig:corrank_HLS_after}
 \end{supfig}
 
