--- a/mSystems/rev2/mSys_MAIN_rev2.tex
+++ b/mSystems/rev2/mSys_MAIN_rev2.tex
@@ -4,7 +4,7 @@
 \documentclass[12pt,oneside,letterpaper]{article}
 
 % release codenumber (update it here!)
-\newcommand\releasecode{REV2 DRAFT$\gamma$}
+\newcommand\releasecode{REV2 DRAFT$\delta$}
 
 %%% PACKAGES
 \usepackage{lmodern} % Activa fuentes y macros de Latin Modern
@@ -25,9 +25,9 @@
 \geometry{textheight=22.5cm} % 22cm for single-space, 22.5cm for double-space
 
 % watermarks (time consuming!)
-%\newwatermark[allpages,color=BurntOrange!4,angle=45,scale=7,xpos=-40,ypos=0]{REVISION}
-%\newwatermark[allpages,color=BurntOrange!12,angle=0,scale=1,xpos=0,ypos=137]{
-%\emph{mSystems} \LaTeX\ manuscript \releasecode}
+\newwatermark[allpages,color=BurntOrange!4,angle=45,scale=7,xpos=-40,ypos=0]{REVISION}
+\newwatermark[allpages,color=BurntOrange!12,angle=0,scale=1,xpos=0,ypos=137]{
+\emph{mSystems} \LaTeX\ manuscript \releasecode}
 
 % helps to keep figures from being orphaned on a page by themselves
 \renewcommand{\topfraction}{0.85}
