--- a/mSystems/rev2/mSys_MandM_rev2.tex
+++ b/mSystems/rev2/mSys_MandM_rev2.tex
@@ -111,7 +111,7 @@ $$x^*_i = x_i + v_i$$
 where $v_i$ is a Gaussian random variable with mean $\mu_i=0$ and standard deviation $\sigma_i=\mathrm{SEM}_i$, as defined previously. For each replicate, a complete unweighted power-law fit was performed, where in order to choose between fitting power laws ($y=Vx^\beta$) using linear regression on log-transformed (LLR) data versus non-linear regression (NLR) we mainly followed the \emph{General Guidelines for the Analysis of Biological Power Laws}\cite{biopwrlaw}. The parameters of the X-weighted fit were then estimated by averaging through all the replicate fits performed, and their errors were estimated by computing the standard deviation for all the fits. At the end of each step, the relative error was calculated by comparing the fit parameter estimation in the last step with the previous one. Finally, both the coefficient of determination of the fit and the coefficient of correlation between the fit parameters were estimated by averaging.
 
 %%
-\subsection*{Rank Stability Index}\label{sec:RSI}
+\subsection*{Rank stability and variability}\label{sec:RSI}
 
 The Rank Stability Index (RSI) is shown as a percentage in a separate bar on the right of the rank matrix plot in Figures \ref{fig:corrank_HLS_abroad} and \ref{fig:corrank_HLS_returned} and Supplementary Figures S\ref{supfig:corrank_HLS_before} and S\ref{supfig:corrank_HLS_after}. The RSI is strictly $1$ for an element whose range never changes over time, and is strictly $0$ for an element whose rank oscillates between the extremes over time. So, the RSI is calculated, per element, as $1$ less the quotient of the number of true rank hops taken between the number of maximum possible rank hops, all powered to $p$:
 \begin{linenomath}
@@ -119,7 +119,7 @@ $${\rm RSI} = \left(1-\frac{\text{true rank hops}}{\text{possible rank hops}}\ri
 \end{linenomath}
 where $D$ is the total of rank hops taken by the studied element, $N$ is the number of elements that have been ranked, and $t$ is the number of time samples. The power index $p=4$ was arbitrarily chosen to increase the resolution in the stable region.
 
-Finally, under the rank matrix of the aforementioned Figures there are plots relevant to the variability of the rank over time. On the one hand, the RV (Rank Variability) for a sampling point shows the absolute difference between every taxon?s rank and its accumulated abundance rank (the overall rank), averaged for all the taxa shown. On the other hand, the DV (Differences Variability) for a sampling point shows the absolute difference between every taxon?s rank at that time and the value that it had at the previous sampling point, averaged for all the taxa shown.
+Finally, under the rank matrix of the aforementioned Figures there are plots relevant to the variability of the rank over time. On the one hand, the RV (Rank Variability) for a sampling point shows the absolute difference between every taxon's rank and its accumulated abundance rank (the overall rank), averaged for all the taxa shown. On the other hand, the DV (Differences Variability) for a sampling point shows the absolute difference between every taxon's rank at that time and the value that it had at the previous sampling point, averaged for all the taxa shown.
 
 %\normalsize
 %TC:endignore
